PyMaker/datas/object2/RawHTML/i4401/Python_DOC_referPages.why-does-evalasserttrue-fail-in-python.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/22558548/eval-syntaxerror-invalid-syntax-in-python">eval SyntaxError: invalid syntax in python</a>
<span class="question-originals-answer-count">
                    3 answers
                </span>
</li>
</ul>
</div>
<p>Look at this:</p>
<pre><code>&gt;&gt;&gt; eval("assert(True)")
Traceback (most recent call last):
  File "&lt;stdin&gt;", line 1, in &lt;module&gt;
  File "&lt;string&gt;", line 1
    assert(True)
         ^
SyntaxError: invalid syntax
</code></pre>
<p>Evaling other functions like this works fine:</p>
<pre><code>&gt;&gt;&gt; eval("str(5)")
'5'
</code></pre>
<p>So why does evaling assert fail??</p>
</div>
<div class="post-text" itemprop="text">
<p><code>eval</code> is for expressions. <code>assert</code> is a statement. You seem to think it's a function, <a href="https://docs.python.org/3/reference/simple_stmts.html#the-assert-statement" rel="noreferrer">but it's not</a>.</p>
<p>You could <code>exec</code> an assert, if you wanted to for some reason.</p>
<pre><code>this = silly = []
exec('assert this is silly')
</code></pre>
</div>
<span class="comment-copy"><code>eval</code> parses and executes expressions, not arbitrary instructions. You want <code>exec</code>.</span>
<span class="comment-copy">If assert is a statement why does it allow open and close parenthesis after it?</span>
<span class="comment-copy">@SaqibAli <code>assert</code> does not even know about those parentheses in the grammar, again because it is a simple statement. <code>(True) == True</code></span>
